add some visualization

--- a/test.ipynb
+++ b/test.ipynb
@@ -149,17 +149,7 @@
     "        coords_ = np.zeros(4, dtype=complex)\n",
     "        for i in range(len(self.roots)):\n",
     "            coords_ += self.constants[i] * self.vectors[i] * np.exp(t * self.roots[i])\n",
-    "        return coords_\n",
-    "\n",
-    "# eq = Solution(1, 1, 1)\n",
-    "# eq.find_roots()\n",
-    "\n",
-    "# for root in eq.find_roots():\n",
-    "    # print(root)\n",
-    "    # print(eq.get_eigen_vectors(root))\n",
-    "\n",
-    "# eq.find_solution_coeffs((1, 0, -1, 0))\n",
-    "# eq.q(1)"
+    "        return coords_\n"
    ]
   },
   {
